Add section on embedding models with visual representation to generative AI lecture

--- a/lectures/04-generative-ai.qmd
+++ b/lectures/04-generative-ai.qmd
@@ -182,3 +182,7 @@ $z$ captures informative properties not directly observed
 
 - Not individual measurements
 - **Rather:** Disease state, treatment response, patient phenotype
+  
+# Embedding models
+
+![](images/vae_encoder.png)
