Add feedback form link to workshop materials section

--- a/lectures/index.qmd
+++ b/lectures/index.qmd
@@ -138,3 +138,5 @@ By the end of this workshop, participants will be able to:
 - [Workshop GitHub Repository](https://github.com/PumasAI-Labs/ViralDynamicsWorkshop)
 
 ---
+
+[Feedback form](https://form.jotform.com/250273410737452)
